--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
     "@pancakeswap-libs/sdk": "1.0.1",
+    "quickswap-sdk": "3.0.8",
     "@pancakeswap-libs/uikit": "^0.27.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
