--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
     "@pancakeswap-libs/sdk": "1.0.1",
-    "quickswap-sdk": "3.0.8",
     "@pancakeswap-libs/uikit": "^0.27.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
@@ -48,6 +47,7 @@
     "multicodec": "^2.0.0",
     "multihashes": "^3.0.1",
     "polished": "^3.3.2",
+    "quickswap-sdk": "^3.0.8",
     "react": "^17.0.1",
     "react-device-detect": "^1.6.2",
     "react-dom": "^17.0.1",
